--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
+    "@uiowa/digit-only": "^2.2.0",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.1",
     "rxjs": "~6.6.0",
