--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
+    "jasmine-console-reporter": "^3.1.0",
     "primeng": "^10.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
