--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
-    "jasmine-console-reporter": "^3.1.0",
+    "@stripe/stripe-js": "^1.9.0",
     "@uiowa/digit-only": "^2.2.0",
+    "jasmine-console-reporter": "^3.1.0",
+    "ngx-stripe": "^10.1.2",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.1",
     "rxjs": "~6.6.0",
+    "stripe": "^8.111.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
